--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <div class="content-area">
         <img 
-            src="images/main_visual.jpg" 
+            src="images/main_visual.png" 
             alt="永恆畢卡索 AR語音導覽單頁視覺圖"
             class="full-visual-image"
             onerror="this.onerror=null;this.src='images/error_placeholder.png';"
@@ -83,4 +83,5 @@
     </footer>
 
 </body>
+
 </html>
