--- a/index.html
+++ b/index.html
@@ -6,46 +6,53 @@
     <title>永恆畢卡索 AR語音導覽</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        /* 設定全螢幕高度，並禁用滾動 */
+        /* 核心修正: 恢復全螢幕高度，禁用滾動 */
         body {
-            background-color: #edb91a; /* 指定的背景色 */
+            background-color: #edb91a; 
             font-family: 'Inter', sans-serif;
             display: flex;
             flex-direction: column;
             justify-content: space-between; /* 將內容和底部按鈕推到兩端 */
             align-items: center;
-            height: 100vh;
-            overflow: hidden; /* 確保無滾動 */
+            height: 100vh; /* 【修正】恢復佔滿整個視窗高度 */
+            overflow: hidden; /* 【修正】禁用所有滾動 */
             padding: 0;
             margin: 0;
+            /* 移除 padding-bottom */
         }
 
-        /* 確保內容容器 (現在只裝圖片) 佔用剩餘空間 */
+        /* 內容區域: 佔用剩餘空間 */
         .content-area {
-            flex-grow: 1; /* 佔用所有剩餘垂直空間 */
+            flex-grow: 1; 
+            flex-shrink: 1; /* 允許壓縮 */
+            width: 100%;
             display: flex;
             align-items: center;
             justify-content: center;
-            width: 100%;
-            padding: 0; /* 移除 padding 讓圖片盡量貼邊 */
+            padding: 0; 
             box-sizing: border-box;
-            min-height: 0; 
+            min-height: 0;
+            position: relative; /* 確保圖片能基於此容器定位 */
         }
 
-        /* 按鈕容器固定在底部，移除白色背景 */
+        /* 圖片修正: 確保圖片寬度佔滿 100% 且高度被裁切填滿容器 */
+        .full-visual-image {
+            width: 100%; /* 寬度必須佔滿 100% */
+            height: 100%; /* 高度必須佔滿 100% */
+            object-fit: cover; /* 【修正關鍵】確保圖片填滿容器，超出部分裁切 */
+        }
+
+        /* 按鈕容器: 疊在圖片上方，固定在底部 */
         .button-footer {
             width: 100%;
             padding: 1rem 1.5rem;
-            background-color: transparent; /* 設為透明，使用 body 的黃色背景 */
-            box-shadow: none; /* 移除陰影 */
-        }
-
-        /* 【移除】原本的文字按鈕樣式，因為我們改用圖片按鈕了 */
-        /* 【保留】圖片樣式確保填滿寬度 */
-        .full-visual-image {
-            max-width: 100%;
-            height: 100%;
-            object-fit: contain; /* 確保圖片完全可見 */
+            background-color: transparent; /* 【修正】背景透明，讓圖片內容可以填到邊緣 */
+            box-shadow: none; 
+            position: absolute; /* 【修正】使用絕對定位，疊在內容區塊 (content-area) 上 */
+            bottom: 0; 
+            left: 0;
+            z-index: 10; 
+            box-sizing: border-box;
         }
     </style>
 </head>
@@ -53,35 +60,33 @@
 
     <div class="content-area">
         <img 
-            src="images/main_visual.png" 
+            src="images/main_visual.jpg" 
             alt="永恆畢卡索 AR語音導覽單頁視覺圖"
             class="full-visual-image"
             onerror="this.onerror=null;this.src='images/error_placeholder.png';"
         />
+
+        <footer class="button-footer">
+            <div class="flex space-x-4">
+                <a 
+                    href="https://shop.firenzecx.com/products/eternal-picasso-art-muses-and-companions-exhibition-ticket"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="flex-1 transition-transform transform hover:scale-[1.02] active:scale-[0.98] focus:outline-none"
+                >
+                    <img src="images/btn_ticket.png" alt="線上購票按鈕" style="width: 100%; height: auto; display: block;">
+                </a>
+                
+                <a 
+                    href="https://rd.arplanets.com/redirect?ac=picassoar"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="flex-1 transition-transform transform hover:scale-[1.02] active:scale-[0.98] focus:outline-none"
+                >
+                    <img src="images/btn_ar.png" alt="現場開通使用按鈕" style="width: 100%; height: auto; display: block;">
+                </a>
+            </div>
+        </footer>
     </div>
-
-    <footer class="button-footer">
-        <div class="flex space-x-4">
-            <a 
-                href="https://shop.firenzecx.com/products/eternal-picasso-art-muses-and-companions-exhibition-ticket"
-                target="_blank"
-                rel="noopener noreferrer"
-                class="flex-1 transition-transform transform hover:scale-[1.02] active:scale-[0.98]"
-            >
-                <img src="images/btn_ticket.png" alt="線上購票按鈕" style="width: 100%; height: auto; display: block;">
-            </a>
-            
-            <a 
-                href="https://rd.arplanets.com/redirect?ac=picassoar"
-                target="_blank"
-                rel="noopener noreferrer"
-                class="flex-1 transition-transform transform hover:scale-[1.02] active:scale-[0.98]"
-            >
-                <img src="images/btn_ar.png" alt="現場開通使用按鈕" style="width: 100%; height: auto; display: block;">
-            </a>
-        </div>
-    </footer>
-
-</body>
-
+    </body>
 </html>
