--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
             font-family: 'Inter', sans-serif;
             display: flex;
             flex-direction: column;
-            justify-content: space-between; /* 內容和底部按鈕推到兩端 */
+            /* 讓內容和底部按鈕推到兩端 */
+            justify-content: space-between; 
             align-items: center;
             height: 100vh; /* 佔滿整個視窗高度 */
             overflow: hidden; /* 禁用所有滾動 */
-            padding: 0;
             margin: 0;
-            /* 【關鍵修正】增加底部填充，將按鈕向上推，避免被邊緣裁切 */
-            padding-bottom: 3.5rem; 
+            padding: 0; 
+            
+            /* 【修正 2】調整底部填充，向上推，預留空間給按鈕和 10px 間距 */
+            /* 原本是 3.5rem，現在增加約 10px (0.625rem) 的間距 */
+            padding-bottom: calc(3.5rem + 10px); 
         }
 
         /* 內容區域: 佔用剩餘空間，作為長圖的容器 */
@@ -37,23 +40,27 @@
 
         /* 圖片修正: 確保圖片寬度佔滿 100% 且高度被裁切填滿容器 */
         .full-visual-image {
-            width: 100%; /* 寬度必須佔滿 100% */
-            height: 100%; /* 高度必須佔滿 100% */
-            object-fit: cover; /* 確保圖片填滿容器，超出部分裁切 */
-            position: absolute; /* 讓圖片填滿 content-area 容器 */
+            width: 100%; 
+            height: 100%; 
+            object-fit: cover; 
+            position: absolute; 
             top: 0;
             left: 0;
-            z-index: 1; /* 確保圖片在最底層 */
+            z-index: 1; /* 【修正 1】將圖片的堆疊層級設為 1 (後景) */
         }
 
         /* 按鈕容器: 固定在底部，疊在圖片上方 */
         .button-footer {
             width: 100%;
-            /* 【修正】縮小垂直 padding，減少按鈕容器自身的高度 */
-            padding: 0.5rem 1.5rem;
+            /* 讓按鈕容器的底部有 10px 的間距 */
+            padding: 0.5rem 1.5rem 0.5rem; 
             background-color: transparent; 
             box-shadow: none; 
+            /* 堆疊層級必須高於圖片 (z-index: 1) */
             z-index: 10; 
+            
+            /* 【修正 3】新增 CSS 讓按鈕容器底部擁有 10px 空間 */
+            margin-bottom: 10px; 
         }
     </style>
 </head>
@@ -66,7 +73,7 @@
             class="full-visual-image"
             onerror="this.onerror=null;this.src='images/error_placeholder.png';"
         />
-        </div>
+    </div>
 
     <footer class="button-footer">
         <div class="flex space-x-4">
