--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             margin: 0;
             padding: 0; 
             
-            /* 【修正 2】調整底部填充，向上推，預留空間給按鈕和 30px 間距 */
-            /* 原本是 3.5rem，現在增加約 10px (0.625rem) 的間距 */
-            padding-bottom: calc(3.5rem + 30px); 
+            /* 【修正 2】調整底部填充，向上推，預留空間給按鈕和 20px 間距 */
+            /* 原本是 3.5rem，現在增加約 20px (1.25reme 的間距 */
+            padding-bottom: calc(3.5rem + 20px); 
         }
 
         /* 內容區域: 佔用剩餘空間，作為長圖的容器 */
@@ -99,4 +99,5 @@
     
 </body>
 </html>
+
 
